fixing size date on mobiles

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -45,7 +45,7 @@ body {
 
 #current-time {
     text-align: left;
-    font-size: 1.8rem;
+    font-size: 1rem;
     color: #0056b3;
     margin-bottom: 0;
     flex-grow: 1;
